--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^6.2.2",
     "@astrojs/tailwind": "^5.1.3",
     "@astrojs/vercel": "^8.0.1",
     "astro": "^5.0.9",
