--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = "build" # Specify the directory to publish
-  command = "npm run build" # Command to build your project
+  command = "npm run build"
+  publish = ".netlify"
 
 [[redirects]]
   from = "/*"
